# image_to_text

./: .gitignore  README.md  index.html  package-lock.json  package.json  script.js  style.css
.github/workflows/: build-tauri.yml
docs/: native-local-ocr-architecture.md
native-ocr/: Package.swift  README.md  build.py  requirements.txt
native-ocr/src/: main.py
native-ocr/swift/Sources/: main.swift
native-ocr/windows/: NativeOCRWindows.csproj  Program.cs
scripts/: prepare-web.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ocr.rs
