[package]
name = "simple_ocr_desktop"
version = "0.1.0"
description = "Simple OCR desktop app built with Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "simple_ocr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1", features = ["derive"] }
